--- a/src/main.css
+++ b/src/main.css
@@ -8,18 +8,34 @@ html {
 
 body {
   margin: 0;
+  /* display: flex;
+  flex-direction: column;
+  min-height: 100vh; */
+}
+
+/*** MEDIA QUERIES ***/
+@media (min-width: 1920px) {
+  body {
+    max-width:1920px;margin:auto!important;
+  }
+}
+
+#root{
+  margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
+
+
 /* .main {
   flex: 1;
 } */
 
-.bg-dark {
+/* .bg-dark {
   background-color: #12002b;
-}
+} */
 
 /* .sr-only {
   /* border: 0 !important;
@@ -153,7 +169,7 @@ body {
   margin-bottom: 0.5rem;
 } */
 
-.sign-in-button {
+/* .sign-in-button {
   display: block;
   width: 100%;
   padding: 8px;
@@ -163,44 +179,44 @@ body {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
-}
+} */
 
-.sign-in-content {
+/* .sign-in-content {
   box-sizing: border-box;
   background-color: white;
   width: 300px;
   margin: 0 auto;
   margin-top: 3rem;
   padding: 2rem;
-}
+} */
 
-.sign-in-icon {
+/* .sign-in-icon {
   font-size: 5rem;
-}
+} */
 
-.input-remember {
+/* .input-remember {
   display: flex;
-}
+} */
 
-.input-remember label {
+/* .input-remember label {
   margin-left: 0.25rem;
-}
+} */
 
-.input-wrapper {
+/* .input-wrapper {
   display: flex;
   flex-direction: column;
   text-align: left;
   margin-bottom: 1rem;
-}
+} */
 
-.input-wrapper label {
+/* .input-wrapper label {
   font-weight: bold;
-}
+} */
 
-.input-wrapper input {
+/* .input-wrapper input {
   padding: 5px;
   font-size: 1.2rem;
-}
+} */
 
 /* .footer {
   display: flex;
@@ -214,12 +230,12 @@ body {
   padding: 0;
 } */
 
-.account {
+/* .account {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid #000000;
+  background-color: #ffffff;
   width: 80%;
   margin: 0 auto;
   flex-direction: column;
@@ -227,44 +243,44 @@ body {
   box-sizing: border-box;
   text-align: left;
   margin-bottom: 2rem;
-}
+} */
 
-.account-amount {
+/* .account-amount {
   margin: 0;
   font-size: 2.5rem;
   font-weight: bold;
-}
+} */
 
-.account-amount-description {
+/* .account-amount-description {
   margin: 0;
-}
+} */
 
-.account-title {
+/* .account-title {
   margin: 0;
   padding: 0;
   font-size: 1rem;
   font-weight: normal;
-}
+} */
 
-.account-content-wrapper {
+/* .account-content-wrapper {
   width: 100%;
   flex: 1;
-}
+} */
 
-.edit-button {
+/* .edit-button {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
   font-weight: bold;
   padding: 10px;
-}
+} */
 
-.header {
+/* .header {
   color: #fff;
   margin-bottom: 2rem;
-}
+} */
 
-.transaction-button {
+/* .transaction-button {
   display: block;
   width: 100%;
   padding: 8px;
@@ -274,9 +290,9 @@ body {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
-}
+} */
 
-@media (min-width: 720px) {
+/* @media (min-width: 720px) {
   .account {
     flex-direction: row;
   }
@@ -288,4 +304,4 @@ body {
   .transaction-button {
     width: 200px;
   }
-}
+} */
